Fix thinko
The `run` script was updated at some point, but the Batect task was not
updated to reflect this. Avoid passing "main" as an argument.